Footer Alignment Issue Fixed
When ReferenceError: showLoading is not defined Error occur then Footer is not align properly. So Footer Alignment Fixed in style.css file

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,7 +217,7 @@ img {
 }
 footer{
   position: fixed;
-  bottom: 10%;
+  bottom: 5%;
   width: 100%;
   color: white;
   text-align: center;
